; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-data.c_new_query_nodes_list.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-data.c_new_query_nodes_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.query_nodes_list = type { i64, i32* }

@tot_query_nodes_list = common dso_local global i64 0, align 8
@MAX_QUERY_NODES = common dso_local global i64 0, align 8
@query_nodes_list_buffer = common dso_local global %struct.query_nodes_list* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.query_nodes_list* (i32*)* @new_query_nodes_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.query_nodes_list* @new_query_nodes_list(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.query_nodes_list*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i64, i64* @tot_query_nodes_list, align 8
  %5 = load i64, i64* @MAX_QUERY_NODES, align 8
  %6 = icmp slt i64 %4, %5
  %7 = zext i1 %6 to i32
  %8 = call i32 @assert(i32 %7)
  %9 = load %struct.query_nodes_list*, %struct.query_nodes_list** @query_nodes_list_buffer, align 8
  %10 = load i64, i64* @tot_query_nodes_list, align 8
  %11 = add nsw i64 %10, 1
  store i64 %11, i64* @tot_query_nodes_list, align 8
  %12 = getelementptr inbounds %struct.query_nodes_list, %struct.query_nodes_list* %9, i64 %10
  store %struct.query_nodes_list* %12, %struct.query_nodes_list** %3, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = load %struct.query_nodes_list*, %struct.query_nodes_list** %3, align 8
  %15 = getelementptr inbounds %struct.query_nodes_list, %struct.query_nodes_list* %14, i32 0, i32 1
  store i32* %13, i32** %15, align 8
  %16 = load %struct.query_nodes_list*, %struct.query_nodes_list** %3, align 8
  %17 = getelementptr inbounds %struct.query_nodes_list, %struct.query_nodes_list* %16, i32 0, i32 0
  store i64 0, i64* %17, align 8
  %18 = load %struct.query_nodes_list*, %struct.query_nodes_list** %3, align 8
  ret %struct.query_nodes_list* %18
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
